cluster/website/preview/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website-preview
  name: website-preview
  namespace: website
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-preview
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: website-preview
    spec:
      containers:
      - image: sgoudham/website:preview
        imagePullPolicy: IfNotPresent
        name: website-preview
        ports:
        - containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 3000
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
