cluster/website/preview/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website-preview
  name: website-preview
  namespace: website
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: website-preview
  sessionAffinity: None
  type: ClusterIP
